--- a/SmartStore/appsettings.json
+++ b/SmartStore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.;Initial Catalog=SmarthStoreDb;Integrated Security=True;Trust Server Certificate=True;"
+    "DefaultConnection": "Data Source=.;Initial Catalog=SmartStoreDb;Integrated Security=True;Trust Server Certificate=True;"
   }
 }
