Send emails and reset password

--- a/SmartStore/appsettings.json
+++ b/SmartStore/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=.;Initial Catalog=SmartStoreDb;Integrated Security=True;Trust Server Certificate=True;"
+  },
+  "BrevoSettings": {
+    "ApiKey": "",
+    "SenderName": "SmartStore",
+    "SenderEmail": ""
   }
 }
