Shopping Cart - Display Items

--- a/SmartStore/appsettings.json
+++ b/SmartStore/appsettings.json
@@ -13,5 +13,8 @@
     "ApiKey": "",
     "SenderName": "SmartStore",
     "SenderEmail": ""
+  },
+  "CartSettings": {
+    "ShippingFee": 6.5
   }
 }
